# Capman-rs

./: .gitignore  Cargo.toml  Makefile
assets/html/: index.html
src/: board.rs  camera.rs  collision.rs  debug.rs  default_layout.txt  enemies.rs  game_assets.rs  input.rs  main.rs  movement.rs  pickup.rs  player.rs  spritesheet.rs  state.rs  ui.rs
