[package]
name = "capman-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.13.0" }
rand = "0.8"

[dependencies.bevy]
version = "0.13.0"
default-features = false
# all cross-platform features
features = [
    # "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_gizmos",
    "png",
    "bevy_ui",
]

[target.'cfg(target_family = "wasm")'.dependencies.bevy]
version = "0.13.0"
default-features = false
features = ["webgl2"]

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.13.0"
default-features = false
features = ["dynamic_linking", "multi-threaded", "x11"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
